# SoLearn

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  FINAL_RECOMMENDATIONS.md  LICENSE  PROGRESS_REPORT.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  package.json
apps/admin/: next.config.js  package.json  tailwind.config.js
apps/backend/: package.json  (+1 more)
backups_20250311_023316/: Accessibility.tsx.bak  AchievementCard.tsx.bak  AppContext.tsx.bak  CertificateCard.tsx.bak  CommentSection.tsx.bak  CourseList.tsx.bak  DiscussionReply.tsx.bak  DiscussionThread.tsx.bak  ErrorBoundary.tsx.bak  LoadingState.tsx.bak  OptimizedList.tsx.bak  ReviewCard.tsx.bak  Toast.tsx.bak  ToastContainer.test.tsx.bak  [id].tsx.bak  achievements.tsx.bak  helpers.test.ts.bak  helpers.ts.bak  index.d.ts.bak  index.tsx.bak  leaderboard.tsx.bak  profile.tsx.bak  reviews.tsx.bak  useDataFetching.ts.bak  useFormValidation.ts.bak
backups_deep_20250311_023426/: Accessibility.tsx.bak  AchievementCard.tsx.bak  AppContext.tsx.bak  CertificateCard.tsx.bak  CommentSection.tsx.bak  ErrorBoundary.tsx.bak  LoadingState.tsx.bak  OptimizedList.tsx.bak  ReviewCard.tsx.bak  Toast.tsx.bak  [id].tsx.bak  achievements.tsx.bak  helpers.test.ts.bak  helpers.ts.bak  index.tsx.bak  reviews.tsx.bak  useFormValidation.ts.bak
contracts/learning/: Cargo.toml
contracts/learning/src/: lib.rs
docs/: ARCHITECTURE.md  LEARNING_PATHS.md  TOKENOMICS.md
scripts/: deep_replace_chinese.sh  detect_chinese.sh  manual_replace_chinese.sh  replace_all_chinese.sh  replace_chinese.sh  restore_from_backup.sh
(+69 files in other folders)
