[package]
name = "solearn-learning"
version = "0.1.0"
description = "SoLearn Learning Achievement Contract for the Learn-to-Earn platform"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "solearn_learning"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
thiserror = "1.0.40"
winnow = "=0.4.1"
solearn-token = { path = "../token", features = ["cpi"] }

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3 